--- a/storefront/app/views/spree/checkout/_address.html.erb
+++ b/storefront/app/views/spree/checkout/_address.html.erb
@@ -13,20 +13,7 @@
           </h5>
           <ul class="select_address list-group mb-5 border mt-3 rounded-md border-default">
             <% user_available_addresses.each_with_index do |address, idx| %>
-              <li class="p-0 m-0 border-b border-default" id="<%= [address_type, dom_id(address)].join('_') %>">
-                <% checked = (address.id == @order.ship_address_id || (!@order.ship_address_id && idx == 0)) %>
-                <div class="custom-control custom-radio px-5 py-4 flex items-center">
-                  <%= radio_button_tag "order_#{address_name}_id", address.id, checked, class: 'custom-control-input radio-input mt-1 mr-5', data: { action: 'checkout-address-book#select' } %>
-                  <label class="custom-control-label d-block select-none cursor-pointer max-w-[calc(100%-58px)]" for="<%= "order_#{address_name}_id_#{address.id}" %>">
-                    <%= turbo_frame_tag dom_id(address) do %>
-                      <%= render 'spree/shared/address', address: address %>
-                      <div class="address-book-actions mt-3 <% unless checked %>hidden<% end %>">
-                        <%= link_to Spree.t(:edit), spree.edit_address_path(address, checkout: @order.token), class: 'text-dark' %>
-                      </div>
-                    <% end %>
-                  </label>
-                </div>
-              </li>
+              <%= render 'spree/checkout/address_list_item', address: address, idx: idx, order: @order, address_type: address_type, address_name: address_name %>
             <% end %>
             <li class="list-group-item p-0 m-0">
               <div class="custom-control custom-radio px-5 py-4 flex items-center">
@@ -58,7 +45,7 @@
 
     <%= form_for @order, url: spree.update_checkout_path(@order.token, @order.state), html: { id: "checkout_form_#{@order.state}" } do |form| %>
       <div>
-        <%= form.hidden_field :state_lock_version %>
+        <%= render 'spree/checkout/order_lock_version', order: @order %>
         <%= form.hidden_field :ship_address_id, data: { 'checkout-address-book-target': 'addressId' } %>
       </div>
 
@@ -77,9 +64,8 @@
   </div>
 <% else %>
   <%= form_for @order, url: spree.update_checkout_path(@order.token, @order.state), html: { id: "checkout_form_#{@order.state}" } do |form| %>
+    <%= render 'spree/checkout/order_lock_version', order: @order %>
     <div class="mb-5">
-      <%= form.hidden_field :state_lock_version %>
-
       <% if !try_spree_current_user || try_spree_current_user.email.blank? %>
         <div class="grid grid-cols-1 lg:grid-cols-2 mb-3 font-body">
           <h5 class="font-body">
