--- a/admin/app/views/spree/admin/shared/sortable_tree/_taxonomy.html.erb
+++ b/admin/app/views/spree/admin/shared/sortable_tree/_taxonomy.html.erb
@@ -26,7 +26,7 @@
     <% end %>
   </div>
 
-  <div class="d-flex align-items-center px-3 ml-3">
+  <div class="d-flex align-items-center px-3 ml-3 gap-2">
     <%= link_to_edit(taxon, url: spree.edit_admin_taxonomy_taxon_path(taxonomy, taxon.id), data: { row_link_target: :link }) if can?(:edit, taxon) %>
 
     <div class="dropdown h-100">
