--- a/admin/app/views/spree/admin/translations/translation_rows/_textarea_row.html.erb
+++ b/admin/app/views/spree/admin/translations/translation_rows/_textarea_row.html.erb
@@ -6,6 +6,6 @@
     <%= @resource.send(field) %>
   </td>
   <td>
-    <%= f.textarea "#{field}_#{locale}", rows: 5, class: "form-control", data: { controller: 'textarea-autogrow'} %>
+    <%= f.text_area "#{field}_#{locale}", rows: 5, class: "form-control", data: { controller: 'textarea-autogrow'} %>
   </td>
 </tr>
