--- a/admin/app/views/spree/admin/translations/translation_rows/_rich_textarea_row.html.erb
+++ b/admin/app/views/spree/admin/translations/translation_rows/_rich_textarea_row.html.erb
@@ -1,13 +1,13 @@
 <%# locals: (f:, field:, locale:) %>
 
 <tr>
-  <td class="text-center"><%= Spree.t(field) %></td>
+  <td><%= Spree.t(field) %></td>
   <td class="text-wrap">
     <%= @resource.send(field)%>
   </td>
   <td>
     <div class="trix-container mb-0">
-      <%= f.rich_textarea "#{field}_#{locale}" %>
+      <%= f.rich_text_area "#{field}_#{locale}" %>
     </div>
   </td>
 </tr>
