--- a/admin/app/views/spree/admin/dashboard/_updater.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_updater.html.erb
@@ -1,15 +1,19 @@
-<% if Spree::Admin::RuntimeConfig.admin_updater_enabled && can?(:manage, current_store) && spree_update_available? && !session[:spree_updater_notice_dismissed] %>
+<% if show_spree_updater_notice? %>
   <div id="updater-notice" class="mb-3">
-    <div class="d-flex align-items-center">
-      <%= image_tag 'favicon_256x256.png', alt: 'Spree', width: 32, height: 32 %>
-      <span class="ml-2">
-        <strong>Spree <%= spree_updater.latest_version['name'] %></strong> is available.
-      </span>
+    <%= image_tag 'favicon_256x256.png', alt: 'Spree', width: 32, height: 32 %>
+    <div class="d-flex flex-column">
+      <p class="mb-1">
+        <strong>Spree <%= spree_updater.latest_release['name'] %></strong> is available.
+        <br />Your current version is <strong>Spree <%= spree_updater.current_release %></strong>. 
+      </p>
+
+      <% if spree_updater.latest_release['url'] %>
+        <div>
+          <%= external_link_to "View release notes", spree_updater.latest_release['url'], target: '_blank', class: 'btn btn-sm btn-link' %>
+        </div>
+      <% end %>
     </div>
 
-    <div class="d-flex align-items-center gap-1">
-      <%= link_to_with_icon 'settings-up', 'Update now', spree_updater.latest_version['url'], target: '_blank', class: 'btn btn-light btn-sm' %>
-      <%= link_to '', spree.admin_dismiss_updater_notice_path, data: { turbo_method: :patch }, class: 'btn-close' %>
-    </div>
+    <%= link_to '', spree.admin_dismiss_updater_notice_path, data: { turbo_method: :patch }, class: 'btn-close ml-auto' %>
   </div>
 <% end %>
