--- a/admin/app/views/spree/admin/admin_users/show.html.erb
+++ b/admin/app/views/spree/admin/admin_users/show.html.erb
@@ -37,6 +37,7 @@
               <%= Spree.t(:email) %>
               <span>
                 <%= @admin_user.email %>
+                <%= clipboard_component(@admin_user.email) %>
               </span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -101,7 +102,7 @@
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 <%= Spree.t(:invited_by) %>
                 <span>
-                <%= @admin_user.invited_by.name %>
+                  <%= link_to @admin_user.invited_by.email, spree.admin_admin_user_path(@admin_user.invited_by), class: 'text-decoration-none', data: { turbo_frame: '_top' } %>
                 </span>
               </li>
             <% end %>
