--- a/admin/app/views/spree/admin/payment_methods/edit.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/edit.html.erb
@@ -3,7 +3,7 @@
   <%= @payment_method.name %>
 <% end %>
 
-<%= form_for @payment_method, as: :payment_method, url: spree.admin_payment_method_path(@payment_method) do |f| %>
+<%= form_for @payment_method, as: :payment_method, url: spree.admin_payment_method_path(@payment_method), html: { id: "edit_payment_method_#{@payment_method.id}" } do |f| %>
   <div class="row">
     <div class="col-lg-6 offset-lg-3">
       <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @payment_method } %>
