--- a/admin/app/views/spree/admin/shared/_content_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_content_header.html.erb
@@ -1,4 +1,4 @@
-<% record = @object || @customer_return || @order || @product || @vendor || @user || @taxon || @store_credit %>
+<% record = @object || @customer_return || @order || @product || @vendor || @user || @admin_user || @taxon || @store_credit %>
 <% record = nil if @user&.is_a?(Spree.admin_user_class) %>
 
 <% show_record_subtitle = record && record.persisted? && record.has_attribute?(:updated_at) %>
@@ -24,7 +24,8 @@
       <%= yield :page_actions if content_for?(:page_actions) %>
 
       <% if action_name == 'edit' && @object %>
-        <%= turbo_save_button_tag Spree.t('actions.update'), class: 'btn btn-primary', form: "edit_#{@object.class.name.demodulize.underscore}_#{@object.id}" %>
+        <% class_name = defined?(model_class) ? model_class.to_s : @object.class.name %>
+        <%= turbo_save_button_tag Spree.t('actions.update'), class: 'btn btn-primary', form: "edit_#{class_name.demodulize.underscore}_#{@object.id}" %>
       <% end %>
 
       <% if show_record_subtitle || content_for(:page_actions_dropdown) %>
