Admin: Improve list pagination user experience
* always show (disabled or not) next/prev buttons
* make the bottom pagination sticky to quickly paginate
* mark which per page option in the dropdown is selected

--- a/admin/app/assets/stylesheets/spree/admin/components/_tables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_tables.scss
@@ -207,7 +207,30 @@ td.actions {
 }
 
 .pagination-container {
-  border-top: 1px solid $gray-50;
+  border-top: 1px solid $table-border-color;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+
+  position: sticky;
+  bottom: 0;
+  background-color: $card-bg;
+  z-index: 100;
+  border-bottom-left-radius: $border-radius-lg;
+  border-bottom-right-radius: $border-radius-lg;
+
+  .page-link {
+    @extend .btn;
+    @extend .btn-sm;
+    @extend .btn-light;
+    @extend .ml-1;
+    @extend .p-2;
+  
+    .ti {
+      @extend .mr-0;
+    }
+  }
+  .page-item.disabled {
+    cursor: not-allowed;
+    opacity: 0.2;
+  }
 }
